--- a/views/main.html
+++ b/views/main.html
@@ -6,7 +6,7 @@
 	</div>
 	<div class="row">
 		<div class="col-md-4 col-md-offset-8">
-			<h1>Talk is cheap. Show me the code.</h1>
+			<h1>Talk is cheap. Show me the code!!</h1>
 		</div>
 	</div>
 	<div class="row">
