finish resume part

--- a/views/resume.html
+++ b/views/resume.html
@@ -56,6 +56,59 @@
 						</ul>
 					</div>
 				</div>
+				<div class="technicalExp">
+				<h3>Technical Experience</h3>
+				<div id="extOne">
+					<div class="row">
+						<div class="pull-left">
+							<p><strong>AngularJS Web Applications</strong> (Personal)</p>
+						</div>
+						<div class="pull-right">
+							<p>Feb 2017 - current</p>
+						</div>
+						<p class="p1">Self-learned AngularJS framework and applied to the personal web applications</p>
+					</div>
+					<ul>
+						<li>Created, downloaded and applied directives into web applications.</li>
+						<li>Wrote services to fetch and parse data(JSON) from Internet, and porcessed and used these data in applications</li>
+						<li>Configured different rotues by using ngRoute to assign views and controllers.</li>
+						<li><a href="https://github.com/MakinoAlan">GitHub link</a></li>
+					</ul>
+				</div>
+				<div id="extTwo">
+					<div class="row">
+						<div class="pull-left">
+							<p><strong>WebGL Game</strong> (for Computer Graphic Course)</p>
+						</div>
+						<div class="pull-right">
+							<p>Jan - April 2016</p>
+						</div>
+						<p class="p1">Used WebGL to develop a simple multiplayer online game.</p>
+					</div>
+					<ul>
+						<li>Finished in a group of two within 2-month period and used GitHub to do the version control.</li>
+						<li>Used Three.js to create and modify the 3D objects</li>
+						<li>Developed game with several features: texture render, collision detection and selection.</li>
+						<li><a href="https://github.com/MakinoAlan/gameAJ">GitHub link</a></li>
+					</ul>
+				</div>
+				<div id="extThree">
+					<div class="row">
+						<div class="pull-left">
+							<p><strong>Java Applications with MySQL</strong> (for Relational Database Course)</p>
+						</div>
+						<div class="pull-right">
+							<p>Sept – Dec 2014</p>
+						</div>
+						<p class="p1">Used Java to write the application, MySQL for database initialization and JDBC to connect them together.</p>
+					</div>
+					<ul>
+						<li>Used Java8 to construct the UI and manipulate the data with different data structure and algorithm</li>
+						<li>Defined schema and ER diagram before actually design.</li>
+						<li>Worked in a group of 4 and finished on time. Got 95% in the final project evaluation.</li>
+					</ul>
+				</div>
+			</div>
 		</div>
 	</div>
 </div>
