--- a/css/main.css
+++ b/css/main.css
@@ -49,9 +49,14 @@
   -webkit-padding-start:15px;
 }
 
+.workExp ul {
+  -webkit-padding-start:0;
+}
+
 .workExp h3 {
-  width:103%;
-  padding-right:30px;
+  width:108%;
+  margin-left:-20px;
+  padding-left: 20px;
   text-align: center;
 }
 
@@ -59,13 +64,21 @@
   list-style: square;
 }
 
-.workExp p {
+.workExp,.technicalExp p {
   padding-left:15px;
 }
 
 .p1 {
-  margin-top: 35px;
+  margin-top: 30px;
 }
+
+.technicalExp h3 {
+  text-align: center;
+  width: 107%;
+}
+
+
+
 
 
 
