--- a/views/resume.html
+++ b/views/resume.html
@@ -70,8 +70,8 @@
 					</div>
 					<ul>
 						<li>Created, downloaded and applied directives into web applications.</li>
-						<li>Wrote services to fetch and parse data(JSON) from Internet, and porcessed and used these data in applications</li>
-						<li>Configured different rotues by using ngRoute to assign views and controllers.</li>
+						<li>Wrote services to fetch and parse data(JSON) from Internet, and processed and used these data in applications</li>
+						<li>Configured different routes by using ngRoute to assign views and controllers.</li>
 						<li><a href="https://github.com/MakinoAlan">GitHub link</a></li>
 					</ul>
 				</div>
