--- a/views/resume.html
+++ b/views/resume.html
@@ -1,6 +1,14 @@
+<script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
+<link rel='stylesheet' href='css/main.css'/>
+
+
 <div class="resume">
-	<div class="row">
-		<div class="col-md-4 col-md-offset-7">
+	<div class="row re">
+
+		<div class="col-md-2 col-md-offset-2 linkedin fix">
+			<div class="LI-profile-badge linkedin"  data-version="v1" data-size="medium" data-locale="en_US" data-type="vertical" data-theme="dark" data-vanity="muzhi-yang-a1b7bb92"><a class="LI-simple-link" href='https://ca.linkedin.com/in/muzhi-yang-a1b7bb92?trk=profile-badge'>Muzhi Yang</a></div>
+		</div>
+		<div class="col-md-4 col-md-offset-3">
 			<h2>Muzhi Yang</h2>
 				<div class="contactInfo">
 					<p class="pull-left" id="p1">Phone:+1 (604)-603-6266</p>
@@ -113,4 +121,3 @@
 	</div>
 </div>
 
-<link rel='stylesheet' href='css/main.css'/>
